--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@ https://templatemo.com/tm-528-elegance
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
-                        <h1 class="welcome-title animate" data-animate="fadeInUp">elegance</h1>
-                        <p class="animate" data-animate="fadeInUp">This is a clean and modern HTML5 template with a video background. You can use this layout for your profile page. Please spread a word about templatemo to your friends. Thank you.</p>
+                        <h1 class="welcome-title animate" data-animate="fadeInUp">OTM Solutions</h1>
+                        <p class="animate" data-animate="fadeInUp">A software powerhouse company, Specialized in ASP .Net, Wordpress solutions for all kinds of business!</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
