--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Elegance - Creative HTML5 Template</title>
+    <title>OTM - Software Solutions</title>
 <!--
 Elegance Template
 https://templatemo.com/tm-528-elegance
@@ -46,7 +46,7 @@ https://templatemo.com/tm-528-elegance
             <div class="container-fluid">
                 <div class="navbar">
                     <a href="#" id="logo" title="Elegance by TemplateMo">
-                        Elegance
+                        OTM
                     </a>
                     <div class="navigation-row">
                         <nav id="navigation">
@@ -78,19 +78,20 @@ https://templatemo.com/tm-528-elegance
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
-                        <h1 class="welcome-title animate" data-animate="fadeInUp">OTM Solutions</h1>
-                        <p class="animate" data-animate="fadeInUp">A software powerhouse company, Specialized in ASP .Net, Wordpress solutions for all kinds of business!</p>
+                        <h1 class="welcome-title animate" data-animate="fadeInUp">Otm Solutions</h1>
+                        <p class="animate" data-animate="fadeInUp">OTM has a group of IT experts and is proud to be one of the leading software development companies. By obtaining the agencies of major manufacturers and pioneers in this field, and the diversity of products that meet the needs of all customers
+                        </p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
             </div>
 
-            <div class="section animated-row" data-section="slide02">
+            <div class="section animated-row" hidden data-section="slide02">
                 <div class="section-inner">
                     <div class="about-section">
                         <div class="row justify-content-center">
                             <div class="col-lg-8 wide-col-laptop">
-                                <div class="row">
+                                <div class="row" >
                                     <div class="col-md-6">
                                         <div class="about-contentbox">
                                             <div class="animate" data-animate="fadeInUp">
@@ -150,59 +151,34 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-bookmark" aria-hidden="true"></i></span>
-                                            <h3>Bootstrap Themes</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
+                                            <h3>Advisory services</h3>
+                                            <p>OTM company that the cadres of the professional work of programs, designers and specialists smart applications sacks, engineers working with our customers in an advisory capacity to determine the requirements to achieve the objectives of the activity, where we offer a variety of consultancy services in the specialized data management engines and administrative and operational services development services using the latest technology to meet the needs of the sector or a client. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-cloud" aria-hidden="true"></i></span>
-                                            <h3>HTML5 Coding</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
+                                            <h3>Software</h3>
+                                            <p>OTM has a distinguished team of analysts and programmers, selected to the highest quality standards. The company is also working on the development of systems and applications and the development of websites and portals. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-desktop" aria-hidden="true"></i></span>
-                                            <h3>Fully Responsive</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
+                                            <h3>Technical Consultations</h3>
+                                            <p>OTM has a team of technically and scientifically qualified to provide technical studies, analyze the problem and provide solutions to it, whether in terms of work automation, designing local or cross-city networks, qualifying staff or providing external expertise.
+                                                Preparation of development studies and technical feasibility of government projects. Management and implementation of IT projects. Providing projects with human and technical resources of scientific competence and practical experience. Providing projects with human and technical resources of scientific competence and practical experience. Implementation of maintenance and operation projects for information technology. </p>
                                         </div>
                                     </div>
-                                    <div class="item animate" data-animate="fadeInUp">
-                                        <div class="service-box">
-                                            <span class="service-icon"><i class="fa fa-mobile" aria-hidden="true"></i></span>
-                                            <h3>Mobile Ready</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
-                                        </div>
-                                    </div>
+                                
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-comments" aria-hidden="true"></i></span>
                                             <h3>Fast Support</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
+                                            <p>OTM is characterized by a quick response to customer requests and the work team works to solve any problem </p>
                                         </div>
                                     </div>
-                                    <div class="item animate" data-animate="fadeInUp">
-                                        <div class="service-box">
-                                            <span class="service-icon"><i class="fa fa-database" aria-hidden="true"></i></span>
-                                            <h3>24-hour Up Time</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
-                                        </div>
-                                    </div>
-                                    <div class="item animate" data-animate="fadeInUp">
-                                        <div class="service-box">
-                                            <span class="service-icon"><i class="fa fa-bell" aria-hidden="true"></i></span>
-                                            <h3>Instant Upgrades</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
-                                        </div>
-                                    </div>
-                                    <div class="item animate" data-animate="fadeInUp">
-                                        <div class="service-box">
-                                            <span class="service-icon"><i class="fa fa-camera" aria-hidden="true"></i></span>
-                                            <h3>Always Monitoring</h3>
-                                            <p>Nullam auctor, justo vitae accumsan ultrices, arcu ex molestie massa, eu maximus enim tortor vitae quam. </p>
-                                        </div>
-                                    </div>
+                                  
                                 </div>
                             </div>
                         </div>
@@ -210,7 +186,7 @@ https://templatemo.com/tm-528-elegance
                 </div>
             </div>
 
-            <div class="section animated-row" data-section="slide04">
+            <div class="section animated-row" data-section="slide04" hidden>
                 <div class="section-inner">
                     <div class="row justify-content-center">
                         <div class="col-md-7 wide-col-laptop">
@@ -505,3 +481,6 @@ https://templatemo.com/tm-528-elegance
 
   </body>
 </html>
+
+
+
