--- a/index.html
+++ b/index.html
@@ -316,30 +316,25 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <div class="contact-box">
                                             <div class="contact-row">
-                                                <i class="fa fa-map-marker"></i> 123 New Street Here, Wonderful City 10220
+                                                <i class="fa fa-map-marker"></i> القاهرة, مصر
                                             </div>
                                             <div class="contact-row">
-                                                <i class="fa fa-phone"></i> 090 080 0210
-                                            </div>
-                                            <div class="contact-row">
-                                                <i class="fa fa-envelope"></i> info@company.co
+                                                <i class="fa fa-envelope"></i> otmsoftwaresolution@gmail.com
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
-                                        <form id="ajax-contact" method="post" action="#">
-                                            <div class="input-field">
-                                                <input type="text" class="form-control" name="name" id="name" required placeholder="Name">
+                                        <div class="contact-box">
+                                            <div class="contact-row">
+                                                <i class="fa fa-phone"></i> 01118878823
                                             </div>
-                                            <div class="input-field">
-                                                <input type="email" class="form-control" name="email" id="email" required placeholder="Email">
+                                            <div class="contact-row">
+                                                <i class="fa fa-phone"></i> 01062314250
                                             </div>
-                                            <div class="input-field">
-                                                <textarea class="form-control" name="message" id="message" required placeholder="Message"></textarea>
+                                            <div class="contact-row">
+                                                <i class="fa fa-phone"></i> 01117490249
                                             </div>
-                                            <button class="btn" type="submit">Submit</button>
-                                        </form>
-                                        <div id="form-messages" class="mt-3"></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
