--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <div class="contact-box">
                                             <div class="contact-row">
-                                                <i class="fa fa-map-marker"></i> القاهرة, مصر
+                                                <i class="fa fa-map-marker"></i> Cairo , Egypt
                                             </div>
                                             <div class="contact-row">
                                                 <i class="fa fa-envelope"></i> otmsoftwaresolution@gmail.com
