Localized website and added english version

--- a/En.html
+++ b/En.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-528-elegance
         <header id="header">
             <div class="container-fluid">
                 <div class="navbar">
-                    <a href="#" id="logo" title="OTM">
+                    <a href="#" id="logo" title="Elegance by TemplateMo">
                         OTM
                     </a>
                     <div class="navigation-row">
@@ -53,11 +53,11 @@ https://templatemo.com/tm-528-elegance
                             <button type="button" class="navbar-toggle"> <i class="fa fa-bars"></i> </button>
                             <div class="nav-box navbar-collapse">
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
-                                    <li data-menuanchor="slide01" class="active"><a href="#slide01">الرئيسية</a></li>
-                                    <li data-menuanchor="slide03"><a href="#slide02">خدماتنا</a></li>
-                                    <li data-menuanchor="slide05"><a href="#slide03">أعمالنا</a></li>
-                                    <li data-menuanchor="slide06"><a href="#slide04">عملاءنا</a></li>
-                                    <li data-menuanchor="slide07"><a href="#slide05">اتصل بنا</a></li>
+                                    <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
+                                    <li data-menuanchor="slide03"><a href="#slide02">Services</a></li>
+                                    <li data-menuanchor="slide05"><a href="#slide03">My Work</a></li>
+                                    <li data-menuanchor="slide06"><a href="#slide04">Testimonials</a></li>
+                                    <li data-menuanchor="slide07"><a href="#slide05">Contact Me</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -75,11 +75,11 @@ https://templatemo.com/tm-528-elegance
             <div class="section animated-row" data-section="slide01">
                 <div class="section-inner">
                     <div class="welcome-box">
-                        <span class="welcome-first animate" data-animate="fadeInUp">أهلا بك في موقع</span>
+                        <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
                         <h1 class="welcome-title animate" data-animate="fadeInUp">Otm Solutions</h1>
-                        <p class="animate" data-animate="fadeInUp">
-                            لدي شركة OTM مجموعة من الخبراء في مجال تكنولوجيا المعلومات و نفخر بكوننا واحدة من افضل شركات البرمجيات, عن طريق تقديم خدماتنا للشركات الكبري و المتاجر, و عن طريق تقديم خدمات تناسب احتياجات عملائنا.                        </p>
-                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>اسحب للاسفل</span></div>
+                        <p class="animate" data-animate="fadeInUp">OTM has a group of IT experts and is proud to be one of the leading software development companies. By obtaining the agencies of major manufacturers and pioneers in this field, and the diversity of products that meet the needs of all customers
+                        </p>
+                        <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
             </div>
@@ -89,31 +89,39 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>خدماتنا</span>
-                                <h2>ماذا نقدم لعملائنا؟</h2>
+                                <span>Services</span>
+                                <h2>What I Do?</h2>
                             </div>
                             <div class="services-section">
                                 <div class="services-list owl-carousel">
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-bookmark" aria-hidden="true"></i></span>
-                                            <h3>خدمات ارشادية</h3>
-                                            <p>تمتلك شركتنا مجموعة من الخبراء في مجالات برمجة و تصميم انظمة الحاسب, نعمل مع شركائنا عن طريق تقديم خدماتنا الاستشارية مثل تحديد المتطلبات او الوقت اللازم لتنفيذ المشروعات, كما نساعد شركائنا علي تحديد افضل الادوات التي تساهم في تنفيذ المشاريع المطلوبة.</p>
+                                            <h3>Advisory services</h3>
+                                            <p>OTM company that the cadres of the professional work of programs, designers and specialists smart applications sacks, engineers working with our customers in an advisory capacity to determine the requirements to achieve the objectives of the activity, where we offer a variety of consultancy services in the specialized data management engines and administrative and operational services development services using the latest technology to meet the needs of the sector or a client. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-cloud" aria-hidden="true"></i></span>
-                                            <h3>برمجيات</h3>
-                                            <p>تمتلك شركتنا عدد من الكفائات في مجالي البرمجة و التحليل, اختيرو بناء علي افضل اساسيات الجودة, من اجل ضمان مستوي البرامج المقدمة لعملائنا.</p>
+                                            <h3>Software</h3>
+                                            <p>OTM has a distinguished team of analysts and programmers, selected to the highest quality standards. The company is also working on the development of systems and applications and the development of websites and portals. </p>
+                                        </div>
+                                    </div>
+                                    <div class="item animate" data-animate="fadeInUp">
+                                        <div class="service-box">
+                                            <span class="service-icon"><i class="fa fa-desktop" aria-hidden="true"></i></span>
+                                            <h3>Technical Consultations</h3>
+                                            <p>OTM has a team of technically and scientifically qualified to provide technical studies, analyze the problem and provide solutions to it, whether in terms of work automation, designing local or cross-city networks, qualifying staff or providing external expertise.
+                                                Preparation of development studies and technical feasibility of government projects. Management and implementation of IT projects. Providing projects with human and technical resources of scientific competence and practical experience. Providing projects with human and technical resources of scientific competence and practical experience. Implementation of maintenance and operation projects for information technology. </p>
                                         </div>
                                     </div>
                                 
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-comments" aria-hidden="true"></i></span>
-                                            <h3>خدمة عملاء ممتازة</h3>
-                                            <p>نوفر لعملائنا خدمة عملاء ممتازة لافضل تجربة استخدام لبرامجنا و مساعدة عملائنا علي تحسين اعمالهم.</p>
+                                            <h3>Fast Support</h3>
+                                            <p>OTM is characterized by a quick response to customer requests and the work team works to solve any problem </p>
                                         </div>
                                     </div>
                                   
@@ -129,8 +137,8 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>اعمالنا</span>
-                                <h2>بعض البرمجيات التي تقدمها الشركة</h2>
+                                <span>My Work</span>
+                                <h2>what i’ve done?</h2>
                             </div>
                             <div class="gallery-section">
                                 <div class="gallery-list owl-carousel">
@@ -245,8 +253,8 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>أراء عملائنا</span>
-                                <h2>ماذا يقول عملائنا عنا؟</h2>
+                                <span>TESTIMONIALS</span>
+                                <h2>what THEY SAY?</h2>
                             </div>
                             <div class="col-md-8 offset-md-2">
                                 <div class="testimonials-section">
@@ -300,15 +308,15 @@ https://templatemo.com/tm-528-elegance
                     <div class="row justify-content-center">
                         <div class="col-md-7 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
-                                <span>اتصل بنا</span>
-                                <h2>بامكانك الوصول الينا عن طريق</h2>
+                                <span>Contact</span>
+                                <h2>Get In Touch!</h2>
                             </div>
                             <div class="contact-section">
                                 <div class="row">
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <div class="contact-box">
                                             <div class="contact-row">
-                                                <i class="fa fa-map-marker"></i> القاهرة, مصر
+                                                <i class="fa fa-map-marker"></i> Cairo , Egypt
                                             </div>
                                             <div class="contact-row">
                                                 <i class="fa fa-envelope"></i> otmsoftwaresolution@gmail.com
