Added buttons for langs

--- a/En.html
+++ b/En.html
@@ -58,6 +58,7 @@ https://templatemo.com/tm-528-elegance
                                     <li data-menuanchor="slide05"><a href="#slide03">My Work</a></li>
                                     <li data-menuanchor="slide06"><a href="#slide04">Testimonials</a></li>
                                     <li data-menuanchor="slide07"><a href="#slide05">Contact Me</a></li>
+                                    <li><a href="/index.html">العربية</a></li>
                                 </ul>
                             </div>
                         </nav>
