--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ https://templatemo.com/tm-528-elegance
                                     <li data-menuanchor="slide05"><a href="#slide03">أعمالنا</a></li>
                                     <li data-menuanchor="slide06"><a href="#slide04">عملاءنا</a></li>
                                     <li data-menuanchor="slide07"><a href="#slide05">اتصل بنا</a></li>
+                                    <li><a href="/En.html">English</a></li>
+
                                 </ul>
                             </div>
                         </nav>
